--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "build": "tsc && vite   build --base=/ROlio-typescript/",
+    "build": "tsc && vite  build ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
