--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@types/node": "^20.10.5",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
