--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.6.7",
     "framer-motion": "^10.16.16",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
