--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
@@ -30,7 +32,8 @@
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react-anchor-link-smooth-scroll": "^1.0.5",
