--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-loader-spinner": "^4.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.8",
     "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.7",
@@ -37,6 +38,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
